# Cross_Platform_API

./: .gitignore  CMakeLists.txt  README.md
cmake/: CmakeTools.cmake  GTest.cmake  Python.cmake  README.md  Test.cmake
include/common_layer/: README.md  callback.h  data.h
include/external_layer/: README.md  cross_platform_api.h  model_external.h
include/internal_layer/: README.md  macros.h  model.h  model_operator.h
project/android/: configuration.gradle  settings.gradle
project/android/app/: build.gradle
project/android/app/src/main/: AndroidManifest.xml
project/android/cross_platform_lib/: build.gradle
project/android/cross_platform_lib/src/main/cpp/: CMakeLists.txt  main.cc
project/android/cross_platform_lib/swig/: android_api.i  swig_gen_android.sh  swig_gen_android_test.sh
project/android/gradle/wrapper/: gradle-wrapper.properties
project/ios/app/: SceneDelegate.m  ViewController.m
project/ios/cross_platform_api_ios/app/: AppDelegate.h  SceneDelegate.h  ViewController.h  ViewController.m
project/ios/cross_platform_api_ios/cross_platform_api_ios/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
project/ios/cross_platform_api_ios/cross_platform_api_ios.xcodeproj/: project.pbxproj
project/ios/cross_platform_api_ios/cross_platform_api_ios/Base.lproj/: Main.storyboard
project/ios/cross_platform_api_ios/cross_platform_api_ios/cross_platform_lib/swig/: ios_api.i  swig_gen_ios.sh
project/ios/cross_platform_api_ios/cross_platform_api_iosTests/: cross_platform_api_iosTests.m
project/ios/cross_platform_api_ios/cross_platform_api_iosUITests/: cross_platform_api_iosUITests.m  cross_platform_api_iosUITestsLaunchTests.m
project/ios/cross_platform_api_ios/cross_platform_lib/swig/: ios_api.i  ios_swig_after.sh  ios_swig_before.sh  swig_gen_ios.sh
project/ios/cross_platform_api_ios/iOSDemo.xcodeproj/: project.pbxproj
project/ios/cross_platform_api_ios/iOSDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/ios/cross_platform_api_ios/iOSDemoUITests/: iOSDemoUITests.m
project/ios/cross_platform_lib/swig/: ios_api.i  swig_gen_ios.sh
project/ios/iOSDemo.xcodeproj/: project.pbxproj
project/ios/iOSDemoTests/: iOSDemoTests.m
project/ios/iOSDemoUITests/: iOSDemoUITestsLaunchTests.m
project/mac/: README.md
project/python/app/: PythonDemo.py
project/python/cross_platform_lib/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
project/python/cross_platform_lib/cmake_build/cross_platform_lib/: Makefile  cmake_install.cmake  test_main_executable
project/python/cross_platform_lib/src/: CMakeLists.txt
project/python/cross_platform_lib/swig/: python_api.i  swig_gen_python.sh
src/: CMakeLists.txt
src/common_layer/: data.cc
src/external_layer/: cross_platform_api.cc
src/internal_layer/: model_operator.cc
src/test/: test_main.cc
test/: CMakeLists.txt  README.md  test_main.cc
(+31 files in other folders)
